--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -100,13 +100,14 @@
     padding-bottom: 2px;
     border-bottom: 2px solid #2196F3;
     margin: 0px;
+    font-weight: bold;
 }
 
 /* Título dos jogadores */
 .title-players {
     color: #111;
-    padding-bottom: 2px;
     margin: 0px;
+    font-weight: normal;
 }
 
 .title-event {
@@ -114,6 +115,8 @@
     padding-bottom: 2px;
     margin: 0px;
     border-bottom: 2px solid #2196F3;
+    font-weight: normal;
+    font-size: 12px;
 }
 
 /* Texto da explicação */
