Refactor: Modularização do backend Django Admin

--- a/backend/chess/templates/admin/chess/game_changelist.html
+++ b/backend/chess/templates/admin/chess/game_changelist.html
@@ -4,7 +4,7 @@
 {{ block.super }}
 <li>
     <a href="import/" class="addlink">
-        Importar Jogos do Arquivo de Texto
+        Importar Jogo
     </a>
 </li>
 {% endblock %}
